--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
-    "express-formidable": "^1.2.0"
+    "express-formidable": "^1.2.0",
+    "express-promise-router": "^4.1.1",
+    "node-postgres": "^0.6.2",
+    "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "husky": "^7.0.4",
+    "nodemon": "^2.0.15"
   }
 }
